--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Porn Sites</title>
+    <title>Survey</title>
   </head>
   <body>
-    <h1>Top Porn Tube Sites</h1>
+    <h1>welcome to my website, Thank you for your participation in my survey</h1>
 	
 
  <script language="javascript">
 	var arr_size = 3;
 	var max_click = 3;
 	var url=new Array(arr_size);
-	url[0]="https://www.pornhub.com/"; url[1]="https://www.xvideos.com/"; url[2]="http://91porn.com/index.php";
+	url[0]="https://limesurvey.rz.tu-bs.de/index.php/957974?newtest=Y&lang=de"; 
+	url[1]="https://limesurvey.rz.tu-bs.de/index.php/895252?newtest=Y&lang=en"; 
+	url[2]="https://limesurvey.rz.tu-bs.de/index.php/252624?newtest=Y&lang=en";
     
 	
 	
@@ -32,15 +34,15 @@
 			}
 		}
 		else{
-			alert("少鸡巴瞎撸")
+			alert("Sorry! The number of participants has reached the maximum, thanks for your support")
 		}
 	
 	}
 
  </script>
 
-    <p> <a href= "javascript:test()" >Your Surprise</a> </p>
+    <p> <a href= "javascript:test()" >survey</a> </p>
 	
-	<p>click the link above to set youself free</p>
+	<p>click the link above to start the survey</p>
   </body>
 </html>
