--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>Survey</title>
+	
+	<style type="text/css"> 
+body{ font-size:18px; line-height:24px;} 
+.exp1{font-size:36px;} 
+.exp2{font-size:xx-small;} 
+.exp3{font-size:small;} 
+.exp4{font-size:x-large;} 
+.exp5{font-size:larger;} 
+.exp6{font-size:smaller;} 
+.exp7{font-size:50%;} 
+.exp8{font-size:150%;} 
+</style> 
+
   </head>
-  <body>
-    <h1>welcome to my website, Thank you for your participation in my survey</h1>
+  <body link="#FF0000" alink="#FF0000" vlink="#FF0000">
+    <h1>Welcome to the website to take part in my survey</h1>
 	
 
  <script language="javascript">
@@ -136,9 +149,15 @@
 	}
 
  </script>
-
-    <p> <a href= "javascript:test()" >survey</a> </p>
-	
-	<p>click the link above to start the survey</p>
+	<br />
+	<p>Hello everyone,this survey is designed for collecting data for my master thesis. I need to train a model 
+	by busing Convolutional Neural Network to compute correlation score of data in scatter plots based on human perception.</p>
+	<br />
+	<p>This survey will take about 15 minutes to complete, further description and guidance will be displayed in the survey.</p>
+	<p>If you are interested, please click the link below to start the survey.</p>
+	<br />
+    <p><a href= "javascript:test()" ><div class="exp1"> start the survey</a> </div></p>
+	<br />
+	<p>If you have any questions, please do not hesitate to contact me.<A href="mailto:zouyux@outlook.com ">zouyux@outlook.com</A></p>
   </body>
 </html>
