--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@ body{ font-size:18px; line-height:24px;}
 	by busing Convolutional Neural Network to compute correlation score of data in scatter plots based on human perception.</p>
 	<br />
 	<p>This survey will take about 15 minutes to complete, further description and guidance will be displayed in the survey.</p>
-	<p>If you are interested, please click the link below to start the survey.</p>
+	<p>If you are interested, please click the link below to start the survey. </p>
+	<p>After finishing the survey, if you are interested in doing another one, click on the link again and it will generate a new survey.</p>
 	<br />
     <p><a href= "javascript:test()" ><div class="exp1"> start the survey</a> </div></p>
 	<br />
