--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body{ font-size:18px; line-height:24px;}
 
   </head>
   <body link="#FF0000" alink="#FF0000" vlink="#FF0000">
-    <h1>Welcome to the website to take part in my survey</h1>
+    <h2 align="center">Survey on the Perception of Quality in Data Diagrams for my Master Thesis</h2>
 	
 
  <script language="javascript">
@@ -149,16 +149,19 @@ body{ font-size:18px; line-height:24px;}
 	}
 
  </script>
-	<br />
-	<p>Hello everyone,this survey is designed for collecting data for my master thesis. I need to train a model 
-	by busing Convolutional Neural Network to compute correlation score of data in scatter plots based on human perception.</p>
-	<br />
-	<p>This survey will take about 15 minutes to complete, further description and guidance will be displayed in the survey.</p>
+
+	<p>Hello everyone,</p>
+	<p>This survey was designed to collect data for my master thesis. During the survey, participants will compare the quality of data diagrams. 
+	Since I am looking at human perception of these diagrams, no prior knowledge is required. Further descriptions and guidance will be displayed in the survey.</p>
+
+	<p>This survey will take about 15 minutes to complete.</p>
 	<p>If you are interested, please click the link below to start the survey. </p>
 	<p>After finishing the survey, if you are interested in doing another one, click on the link again and it will generate a new survey.</p>
-	<br />
+
     <p><a href= "javascript:test()" ><div class="exp1"> start the survey</a> </div></p>
-	<br />
-	<p>If you have any questions, please do not hesitate to contact me.<A href="mailto:zouyux@outlook.com ">zouyux@outlook.com</A></p>
+	
+	<p>If you have any questions, please do not hesitate to contact me.</p>
+	<p>best regards,</p>
+	<p>Yuxin Zou,<A href="mailto:zouyux@outlook.com ">zouyux@outlook.com</A></p>
   </body>
 </html>
