--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@ body{ font-size:18px; line-height:24px;}
  </script>
 
 	<p>Hello everyone,</p>
-	<p>This survey was designed to collect data for my master thesis. During the survey, participants will compare the quality of data diagrams. 
+	<p>This survey was designed to collect data for my master thesis. During the survey, you will compare the quality of data diagrams. 
 	Since I am looking at human perception of these diagrams, no prior knowledge is required. Further descriptions and guidance will be displayed in the survey.</p>
 
 	<p>This survey will take about 15 minutes to complete.</p>
 	<p>If you are interested, please click the link below to start the survey. </p>
-	<p>After finishing the survey, if you are interested in doing another one, click on the link again and it will generate a new survey.</p>
+	<p>After finishing the survey, if you are interested in doing another one, click on the link again and it will generate a new survey. ☺</p>
 
     <p><a href= "javascript:test()" ><div class="exp1"> start the survey</a> </div></p>
 	
