--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@ body{ font-size:18px; line-height:24px;}
 	<p>If you are interested, please click the link below to start the survey. </p>
 	<p>After finishing the survey, if you are interested in doing another one, click on the link again and it will generate a new survey. ☺</p>
 
-    <p><a href= "javascript:test()" ><div class="exp1"> start the survey</a> </div></p>
+    <p><a href= "javascript:test()" ><div class="exp1"> Start the survey</a> </div></p>
 	
 	<p>If you have any questions, please do not hesitate to contact me.</p>
-	<p>best regards,</p>
-	<p>Yuxin Zou,<A href="mailto:zouyux@outlook.com ">zouyux@outlook.com</A></p>
+	<p>Best regards,</p>
+	<p>Yuxin Zou, <A href="mailto:zouyux@outlook.com ">zouyux@outlook.com</A></p>
   </body>
 </html>
